# EfficientCppPractice

./: CMakeLists.txt  README.md  clocks.cpp  compile_commands.json  main.cpp
benchmark/: branched.cpp  branchless.cpp  concurrency.cpp  memory.cpp  micro-benchmark.cpp
